--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/osc?createDatabaseIfNotExist=true
-#Timezone?
+spring.datasource.url=jdbc:mysql://localhost:3306/osc?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Password1!
 #create, update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
