--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.hibernate</groupId>
+     <artifactId>hibernate-core</artifactId>
+     <version>5.4.4.Final</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
