changes from main

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/osc?createDatabaseIfNotExist=true
-#Timezone?
-spring.datasource.username=root
-spring.datasource.password=Password1!
+spring.datasource.url=jdbc:mysql://b10e2c7a430fbc:4299a8a5@us-cdbr-east-02.cleardb.com/heroku_6885947181216f7?reconnect=true
+spring.datasource.hikari.maximum-pool-size=5
 #create, update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
